WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44495
[EFL] Url of HistoryItem was broken for special character like korean
https://bugs.webkit.org/show_bug.cgi?id=44495
Summary
[EFL] Url of HistoryItem was broken for special character like korean
Ryuan Choi
Reported
2010-08-24 00:12:03 PDT
visiting any site after entered below site, url of history item was broken.
http://ko.wikipedia.org/wiki/%EC%9C%84%ED%82%A4%EB%B0%B1%EA%B3%BC:%EB%8C%80%EB%AC%B8
(
http://ko.wikipedia.org/wiki/위키백과:대문
) It's because of simple implementation of ewk_fram_view_state_save. but I think that we can remove setTitle and setURLString in ewk_frame_view_state_save. I checked like below. and I found that before and after was same. void ewk_frame_view_state_save(Evas_Object *o, WebCore::HistoryItem* item) { const char *title = ewk_frame_title_get(o); const char *uri = ewk_frame_uri_get(o); printf("%s\n", item->title().utf8().data()); printf("=>%s\n", title); printf("%s\n", item->urlString().utf8().data()); printf("=>%s\n", uri); item->setTitle(WTF::String::fromUTF8(title)); item->setURLString(WTF::String::fromUTF8(uri)); evas_object_smart_callback_call(o, "state,save", 0); }
Attachments
Patch
(1.29 KB, patch)
2010-08-24 00:35 PDT
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryuan Choi
Comment 1
2010-08-24 00:35:58 PDT
Created
attachment 65225
[details]
Patch
Rafael Antognolli
Comment 2
2010-08-26 10:31:27 PDT
Hi Ryuan, Can you detail more this problem? I just checked the url of this site on history (using Eve as test application), and it seems to work fine. Is the url of this korean site that is broken? Or other urls? (actually, everything seems to be ok here)
Ryuan Choi
Comment 3
2010-08-27 07:33:00 PDT
(In reply to
comment #2
)
> Hi Ryuan, > > Can you detail more this problem? I just checked the url of this site on history (using Eve as test application), and it seems to work fine. > > Is the url of this korean site that is broken? Or other urls? (actually, everything seems to be ok here)
yes. It's hard to reproduce. below is reproduce step. 1. launch like below EWeblauncher
http://www.wikipedia.org
2. click link '한국어' and then you can see some korean site which is
http://ko.wikipedia.org/wiki/위키백과:대문
3. click a one of link to move other page(I use English in left menu) 4. press F1 to move back. I found that latest webkit crashes and previous version just print different page which explain broken link as korean. I'll investigate why crash. but we'd better to remove this code. It looks not required and buggy.
Adam Barth
Comment 4
2010-08-30 16:32:40 PDT
Comment on
attachment 65225
[details]
Patch ok
WebKit Commit Bot
Comment 5
2010-08-30 21:42:09 PDT
Comment on
attachment 65225
[details]
Patch Clearing flags on attachment: 65225 Committed
r66451
: <
http://trac.webkit.org/changeset/66451
>
WebKit Commit Bot
Comment 6
2010-08-30 21:42:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug