2010-08-30  Ryuan Choi  <ryuan.choi@samsung.com>

Reviewed by Adam Barth.

        [EFL]Url of HistoryItem was broken for special character like korean
        https://bugs.webkit.org/show_bug.cgi?id=44495

        Remove unnecessary code. This makes a bug with complicated URL.

        * ewk/ewk_frame.cpp:
        (ewk_frame_view_state_save):

Canonical link: https://commits.webkit.org/57211@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66451 268f45cc-cd09-0410-ab3c-d52691b4dbfc